[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/cosmetics_menu.gd" id="1_cosmetics"]
[ext_resource type="Texture2D" path="res://assets/character/dog_idle.png" id="2_preview"]
[ext_resource type="AudioStream" path="res://assets/sounds/select-sfx.wav" id="3_select_snd"]

[node name="CosmeticsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cosmetics")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 48
text = "Cosmetics"

[node name="ColorLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 120.0
offset_right = 400.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 22
text = "Character Color"

[node name="ColorGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 160.0
offset_right = 650.0
offset_bottom = 340.0
columns = 4

[node name="PreviewLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 120.0
offset_right = 950.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 22
text = "Preview"

[node name="Preview" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 770.0
offset_top = 170.0
offset_right = 930.0
offset_bottom = 390.0
texture = ExtResource("2_preview")
expand_mode = 1
stretch_mode = 5

[node name="SelectedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 400.0
offset_right = 1000.0
offset_bottom = 430.0
theme_override_font_sizes/font_size = 18
text = "Selected: Default"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 520.0
offset_right = 311.0
offset_bottom = 570.0
text = "Back"

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_select_snd")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
